src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

/* #tsparticles {
  position: fixed !important;
  left:0;
  top:0;
  width:100%;
  /* border: 2px solid purple; */
  /* display: none; */
  /* height:100%; */
/* } */



#tsparticles {
  height: 100%;
}

#particles-canvas {
  position:absolute !important;
  left:0;
  top:0;
  width: 100%;
  height: 100%;
  /* height:100%; 
  /* height: 100%;
  width: 100%; */
  /* border: 10px solid red; */
}

.home-container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  /* border: 1px solid green */
}

.home-text {
  z-index: 2;
  color: white;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.home-container {
  /* background: black; */
}

.mr-auto {
  display: flex;
  justify-items: stretch;
  align-items: center;
}

.nav {
  /* background-color: var(--off-white); */
  /* position: sticky; */
  /* top: 0px; */
  /* width: 100%; */
  /* height: 80px; */
  /* z-index: 1000; */
  /* box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15); */
  /* border: 1px solid green; */
}

.first-nav {
  /* margin-right: 0px; */
  /* text-align: left; */
  /* float: left; */
  /* border: 1px solid purple */
}

.nav-content {
  /* text-align: right; */
  /* border: 1px solid red; */
  /* width: 100% */
}


.nav-items {
  /* border: 1px solid red; */
  /* text-align: left; */
  /* width: 100% */
}

.resume {
  /* float: right; */
}

.nav .nav-content {
  /* max-width: 900px; */
  /* padding: 0rem 3rem; */
  /* margin: 0 auto; */
  /* display: flex; */
  /* justify-content: space-between; */
  /* align-items: center; */
  /* height: 100%; */
  /* width: 100%; */
}

.nav-item {
  /* display: inline; */
  cursor: pointer;
  margin-left: 2rem;
  /* color: #333; */
}

.nav-item:hover {
  /* color: black; */
  /* cursor: pointer; */
  /* text-decoration: underline; */
  /* transition-timing-function: ease; */
}

.bars {
  /* display: none; */
}

/* @media screen and (max-width: 700px) {
  .nav-items .nav-item {
    display: none;
  }
  .nav-items .bars {
    float: right;
    display: block;
  }
} */

/* @media screen and (max-width: 600px) {
  .nav-items.responsive {
    position: relative;
  } */

  /* .nav-items.responsive .bars {
    position: absolute;
    right: 0px;
    top: 0px
  }

  .nav-items.responsive li {
    float: none;
    display: block;
    text-align: center;
  }
} */

.home-container {
  /* height: 100vh; */
}

.about-container {
  /* height: 100vh; */

  /* border: 1px solid red; */
}

.projects-container {
  /* height: 100vh; */
  text-align: center;
  padding-top: 10rem;
  background: black;
  /* z-index: 1; */
  /* border: 1px solid blue; */
}

.blog-container {
  /* margin-top: 10rem; */
  background-color: purple
  /* border: 1px solid red; */
}

.hello {
  padding: 5px;
}

.project-tiles {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
  /* margin: auto; */
  /* grid-template-rows: 50% 50%; */
  justify-items: center;
  background-color: black;
  z-index: 1;
  /* border: 1px solid red; */
  /* padding: 2rem; */
  /* padding-left: 5rem; */
}

/* .project-tiles img {
  /* height: 100%; */
  /* width: 80%; */
  /* z-index: 0; */
  /* border: 1px solid yellow; */
  /* margin: auto; */
  /* justify-items: space-around; */

.cardz {
  width: 80%;
  /* border: 1px solid yellow; */
  /* border: 1px solid red; */
  /* margin: auto; */
  position: relative;
  text-align: center;
  margin: 2vh;
  border-radius: 20px;
  overflow: hidden;
  /* border: 10px solid red; */
  /* overflow: hidden; */
}

.cardz-ind {
  position: relative;
  margin: auto;
  text-align: center;
  /* border: 5px solid yellow; */
  height: 45vh;
  /* background-image: url('./assets/SportsScraper.png'); */
  background-size: cover;
  width: 100%;
  transition: 0.3s ease-in-out;
}

.sports {
  background-image: url('./assets/screenshots/sportsscraper/sportsscraper1.png');
  animation-name: lebron;
  animation-duration: 1s;
}

/* .sports:after{
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  word-wrap: break-word;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.6);
  color: #fff;
  /* opacity: 0; */
  /* content: attr(data-text) */
/* } */

.pokemon  {
  /* animation-fill-mode: both; */
  background-image: url('./assets/screenshots/pokemon/pokemon1.png');
  animation-name: pokeTCG;
  animation-duration: 1s;
}

.nightlife {
  background-image: url('./assets/screenshots/nightlife/nightlife1.png');
  animation-name: nyght;
  animation-duration: 1s;
}

.uefa {
  /* z-index:0; */
  background-image: url('./assets/screenshots/uefa/uefa1.png');
  animation-name: soccer;
  animation-duration: 1s;
  /* transition: 0.5s */
}

/* .uefa:hover {
  background-image: none;
  opacity: 0;
  transition: 0.3s
} */

/* .cardz:hover {
  opacity: 0;
  transition: 0.3s
} */

.card-text {
  z-index:2;
  border: 1px solid red;
  position: absolute;
  /* bottom: 200000px; */
  top: 0;
  /* opacity: 0; */
  color: red;
  margin: 0 auto;
  right: 0;
  left: 0;
  opacity: 0;
  transition: 0.3s ease-in-out;
}

.learnButton {
  bottom: 0;
  right: 0;
  left: 0;
  opacity: 0;
  margin: 0 auto;
  position: absolute;
  color: red;
  width: 30%;
  border: 2px solid pink;
  transition: 0.3s ease-in-out

}

/* .testyyy {
  opacity: 0;
  transition: 0.3s ease-in-out;
} */

/* .testyyy:hover .card-text {
  opacity: 1;
  transition: 0.3s ease-in-out;
  top: 20%;
} */

.cardz:hover .cardz-ind {
  opacity: 0;
  transition: 0.3s ease-in-out;
}

.cardz:hover .card-text {
  opacity: 1;
  transition: 0.3s ease-in-out;
  top: 20%;
}

.cardz:hover .learnButton {
  opacity: 1;
  transition: 0.3s;
  bottom: 20%;
}

.learnButton:hover {
  cursor: pointer;
  transition: 0.1s;
  background-color: purple;
  color: white;
}

@keyframes lebron {
  from {right: 1000px}
  to {right: 0px;}
}

@keyframes pokeTCG {
  from {bottom: 1000px}
  to {bottom: 0px}
}

@keyframes nyght {
  from {top: 1000px}
  to {top: 0px}
}

@keyframes soccer {
  from {left: 1000px}
  to {left: 0px}
}

/* [data-aos="hello"] {
  transform: skewX(45deg);
  opacity: 0;
  transition-property: transform, opacity;
  &.aos-animate {
    transform: skewX(0);
    opacity: 1;
  }
} */

.wow {
  visibility: hidden;
}


.about-container {
  /* max-width: 100%; */
  /* border: 10px solid red; */
  /* display: grid; */
  /* border: 1px solid red; */
  /* grid-template-columns: repeat(auto-fill, minmax(700px, 1fr)); */
  /* grid-template-rows: repeat(auto-fill, minmax(500px, 1fr)); */
  /* justify-content: center; */
}
.about-header {
  padding-top: 8rem;
}

.about-bar {
  /* border: 2px solid gold; */
  background: blue;
  height: 4px;
  width: 4rem;
  margin: auto;
}

.about-content {
  /* border: 5px solid green; */
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(485px, 1fr));
}

.projects-bar {
  /* border: 2px solid gold; */
  background: blue;
  height: 4px;
  width: 4rem;
  margin: auto;
}

.holder {
  /* border: 1px solid red; */
  /* margin: auto; */
  text-align: center;
  /* margin-top: 2rem; */
  /* padding-left: 200rem; */
  padding-top: 2rem;
  height: 80vh;
  max-width: 100%;
  /* overflow-wrap: break-word; */
}

.holder img {
  /* border: 1px solid teal; */
  height: 40vh;
}

.about-title {
  /* border: 12px solid purple; */
  /* grid-column: 1/3; */
  text-align: center;
  /* border: 1px solid red; */
  /* width: 100%; */
}

.jimmybuckets {
  padding-top: 6rem;
  /* padding-right: 6rem; */
  /* max-width: 70%; */
  /* border: 1px solid red; */
  /* text-align: center; */
}

.lemmesee {
  /* border: 1px solid purple */
}

.caption {
  margin: auto;
  /* text-align: center; */
  width: 80%;
  /* border: 1px solid yellow; */
}

.about-sub-headers {
  /* display: block; */
  /* margin: auto 0; */
  text-align: center;
  /* border: 1px solid red; */
}

.skills {
  text-align: center;
  display: grid;
  /* border: 1px solid magenta; */
  max-width: 100%;
  grid-template-columns: 1fr 1fr 1fr;
  padding-top: 2rem;
}

@media screen and (max-width: 500px) {
  .skills {
    grid-template-columns: 100%;
  }
} 

.skills-heading {
  grid-column: 1/3;
}

.devIcon {
  height: 2rem;
}

.typeSkills {
  display: grid;
  grid-template-columns: 1fr 1fr;
  /* border: 1px solid greenyellow */
}

/* .hey {
  max-width: 70vw !important;
  width: 40vw;
  height: 60vh;
  background-color: yellow;
} */

.jeff {
  /* background-color: red; */
  /* height: 10vh; */
  /* width: 90vw; */
  /* max-width: none !important; */
}

.screenshot {
  /* height: 60% !important; */
  /* border: 1px solid red; */
  padding: 0px !important;
}

.screenshots {
  width: 100%
}

.custom-modal-body {
  /* border: 1px solid red; */
  padding: 0px !important;
}

.modal-button {
  /* height: 50px; */
  /* width: 50px; */
  height: 2.8rem;
  width: auto;
  /* display: block; */
  /* margin: auto; */
}

.modal-button-link:hover {
  cursor: pointer;
  /* border: 1px solid red; */
}

.modal-button-link {
  /* position: absolute; */
  /* bottom: 100px; */
  padding-bottom: 0px;
  margin-bottom: 0px;
  /* border: 1px solid red; */
}

.modal-button-div {
  text-align: center;
  /* border: 1px solid red; */
  position: relative;
  /* border: 1px solid red; */
  /* padding: 0px */
}

.modal-foot-buttons {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 1rem;
  /* border: 1px solid red; */
}

.modal-footer {
  /* justify-content: flex-start !important; */
  /* border: 1px solid red; */
}

.close-button {
  margin-left: auto !important;
}

.blogs {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 2rem;
  padding: 2rem;
}

.caro-text {
  text-shadow: 2px 2px #ff0000;
}

.blog-pic {
  /* height: 100%; */
  width: 100%;

}

.ind-blog {
  cursor: pointer;
  /* border: 1px solid red; */
  /* padding-bottom: 0px; */
}

.info {
  /* width: 40%;
  display: grid;
  grid-template-columns: 10% 90%; */
  /* border: 1px solid red; */
}

.info-pics {
  width: 2rem;
  height: auto;
}

.faw-icons {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  color: tomato;
  /* padding-left: 25rem; */
}

.fab:hover {
  color: black;
  transition: 1.3s;
  cursor: pointer;
}

.contact {
  display: grid;
  padding-top: 2rem;
  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
  border: 1px solid purple;
}

.contact-info {
  padding-left: 2rem;
  border: 1px solid green
}

.fas {
  margin-right: 1rem;
  border: 1px solid red
}

.contact-info p {
  font-size: 1.2rem;
}

.profpic {
  border-radius: 15px;
}

.active {
  color: tomato;
  transition: 1.2s;
}

.active:hover {
  color: tomato;
  transition: 1.2s;
}

